[package]
name = "gitlab_graphql_api_client"
version = "0.1.0"
edition = "2021"

[[bin]]  # Start of the bin section
name = "gitlab_graphql_api_client"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"